--- a/css/style.css
+++ b/css/style.css
@@ -160,7 +160,7 @@ section {
     position: relative;
     display: flex;
     justify-content: space-between;
-    width: 34.5rem;
+    /* width: 34.5rem; */
     height: 5rem;
 }
 
@@ -850,9 +850,9 @@ section:nth-child(odd) .animate.scroll{
 .about.show-animate .animate.scroll,
 .education.show-animate .animate.scroll,
 .skills.show-animate .animate.scroll,
+.portfolio.show-animate .animate.scroll,
 .contact.show-animate .animate.scroll,
-.footer.show-animate .animate.scroll,
-.portfolio.show-animate .animate.scroll {
+.footer.show-animate .animate.scroll {
     transition-delay: calc(.3s * var(--i));
     width: 0;
 }
